# VGSS

./: .gitignore  README.md  README.txt  install.sh  pyproject.toml
input/: INPUTFILE_01.m  INPUTFILE_02.m  INPUTFILE_03.m  INPUTFILE_04.m  INPUTFILE_05.m  INPUTFILE_06_Tilted.m  INPUTFILE_07_Trapezoidal.m  INPUTFILE_MANY_NETS.m  INPUTFILE_TOUCHING_DIRECT.m
output/: all_net_vgss_points.csv  vgss_points.csv
src/FRW/: cli.py  random_walk.py  visualization.py
src/bgs/: __init__.py  distances.py  gaussian_surface.py  main.py  matlab_parser.py  models.py  sampling.py  topology.py  vgss.py  vgss_cli.py  vgss_geometry.py  visualization.py
src/bgs_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_distances.py  test_frw_integration.py  test_gaussian_surface.py  test_parser.py  test_sampling.py  test_topology.py  test_vgss_geometry.py  test_vgss_integration.py
